# bin2mif

./: CHANGELOG.md  LICENSE  README.md  bin2mif.cabal  default.nix  derivation.nix  hie.yaml  img2mif.sh  nixpkgs.nix  overlay.nix  shell.nix
app/: Main.hs
lib/Data/: Mif.hs
